# hcp

./: Cargo.toml  README.md
crates/hcp-cli/: Cargo.toml
crates/hcp-cli/src/: main.rs
crates/hcp-core/: Cargo.toml
crates/hcp-core/src/: error.rs  lib.rs  module.rs  types.rs
crates/hcp-ecc/: Cargo.toml
crates/hcp-ecc/src/: hamming.rs  lib.rs
crates/hcp-hdl/: Cargo.toml
crates/hcp-hdl/src/: ecc_pass.rs  lib.rs  verilog.rs
crates/hcp-package/: Cargo.toml
crates/hcp-package/src/: builder.rs  image.rs  lib.rs  manifest.rs
crates/hcp-protocol/: Cargo.toml
crates/hcp-protocol/src/: client.rs  jsonrpc.rs  lib.rs  messages.rs  registry.rs  server.rs
crates/hcp-sim/: Cargo.toml
crates/hcp-sim/src/: ecc_sim.rs  engine.rs  error_inject.rs  lib.rs  signals.rs  vcd.rs
output/registry/counter-ecc-0.3.0/: index.json
output/registry/counter-ecc-0.3.0/verilog/: counter_ecc.sv
