[workspace]
resolver = "2"
members = [
    "crates/hcp-core",     # Core types: Bits<N>, Signal, Module, Port
    "crates/hcp-ecc",      # ECC code generators (Hamming SEC-DED, etc.)
    "crates/hcp-hdl",      # HDL compiler: AST → IR → ECC Pass → Verilog
    "crates/hcp-package",  # Phase 2: OCI-style hardware image packaging
    "crates/hcp-protocol", # Phase 3: HCP protocol — JSON-RPC server + client
    "crates/hcp-sim",      # Phase 4: Cycle-accurate hardware simulator
    "crates/hcp-cli",      # Command-line tool
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Hardware Context Protocol — MCP for Hardware"

[workspace.dependencies]
# Shared across all crates
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
