[package]
name = "hcp-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HCP protocol — JSON-RPC 2.0 server and client for hardware resource sharing"

[dependencies]
hcp-core = { path = "../hcp-core" }
hcp-package = { path = "../hcp-package" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
